Fix Wrap icons

--- a/style/plugin/wrap.css
+++ b/style/plugin/wrap.css
@@ -307,8 +307,8 @@
 	.wrap_info {
 		@apply
 			text-blue-800 bg-blue-100 dark:text-blue-300 dark:bg-blue-900
-			bg-[url('/lib/tpl/tailwind/icon.php?icon=note-info&color=blue-800')]
-			dark:bg-[url('/lib/tpl/tailwind/icon.php?icon=note-info&color=blue-900')]
+			!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-info&color=blue-800')]
+			dark:!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-info&color=blue-900')]
 		;
 	}
 
@@ -316,48 +316,48 @@
 	.wrap_important {
 		@apply
 			text-orange-800 bg-orange-100 dark:text-orange-300 dark:bg-orange-900
-			bg-[url('/lib/tpl/tailwind/icon.php?icon=note-important&color=orange-800')]
-			dark:bg-[url('/lib/tpl/tailwind/icon.php?icon=note-important&color=orange-900')]
+			!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-important&color=orange-800')]
+			dark:!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-important&color=orange-900')]
 		;
 	}
 
 	// alert
 	.wrap_alert {
 		@apply text-red-800 bg-red-100 dark:text-red-300 dark:bg-red-900
-			bg-[url('/lib/tpl/tailwind/icon.php?icon=note-alert&color=red-800')]
-			dark:bg-[url('/lib/tpl/tailwind/icon.php?icon=note-alert&color=red-900')]
+			!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-alert&color=red-800')]
+			dark:!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-alert&color=red-900')]
 		;
 	}
 
 	// tip
 	.wrap_tip {
 		@apply text-yellow-800 bg-yellow-100 dark:text-yellow-300 dark:bg-yellow-900
-			bg-[url('/lib/tpl/tailwind/icon.php?icon=note-tip&color=yellow-800')]
-			dark:bg-[url('/lib/tpl/tailwind/icon.php?icon=note-tip&color=yellow-900')]
+			!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-tip&color=yellow-800')]
+			dark:!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-tip&color=yellow-900')]
 		;
 	}
 
 	// help
 	.wrap_help {
 		@apply text-purple-800 bg-purple-100 dark:text-purple-300 dark:bg-purple-900
-			bg-[url('/lib/tpl/tailwind/icon.php?icon=note-help&color=purple-800')]
-			dark:bg-[url('/lib/tpl/tailwind/icon.php?icon=note-help&color=purple-900')]
+			!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-help&color=purple-800')]
+			dark:!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-help&color=purple-900')]
 		;
 	}
 
 	// todo
 	.wrap_todo {
 		@apply text-sky-800 bg-sky-100 dark:text-sky-300 dark:bg-sky-900
-			bg-[url('/lib/tpl/tailwind/icon.php?icon=note-todo&color=sky-800')]
-			dark:bg-[url('/lib/tpl/tailwind/icon.php?icon=note-todo&color=sky-900')]
+			!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-todo&color=sky-800')]
+			dark:!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-todo&color=sky-900')]
 		;
 	}
 
 	// download
 	.wrap_download {
 		@apply text-lime-800 bg-lime-100 dark:text-lime-300 dark:bg-lime-900
-			bg-[url('/lib/tpl/tailwind/icon.php?icon=note-download&color=lime-800')]
-			dark:bg-[url('/lib/tpl/tailwind/icon.php?icon=note-download&color=lime-900')]
+			!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-download&color=lime-800')]
+			dark:!bg-[url('/lib/tpl/tailwind/icon.php?icon=note-download&color=lime-900')]
 		;
 	}
 
